Enhance button styles and update layout
Added border and background color to button styles. Updated roleModeButtonDiv to use flex display and center alignment.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     font-family:'BigNoodleTooOblique';
     font-size:50px;
     width:300px;
+    border:0px;
+    background-color: #ff000000;
+    cursor: pointer;
 }
 
 #roleModeButton
@@ -39,9 +42,8 @@
 
 #roleModeButtonDiv
 {
-    justify-content: right;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    
+    height: 150vh;
 }
-    
