--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@
   src: url('./assets/BIGNOODLETOOOBLIQUE.TTF');
 }
 
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
+body
+{
+    background-image: url(./assets/owbg.png);
+    background-size: cover;
+    background-position: center;
+}
+
 #roleModeButtonStyle
 {
     font-family:'BigNoodleTooOblique';
@@ -10,6 +22,7 @@
     width:300px;
     border:0px;
     background-color: #ff000000;
+    color:orange;
     cursor: pointer;
 }
 
@@ -43,7 +56,7 @@
 #roleModeButtonDiv
 {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    height: 150vh;
+    height: 90vh;
 }
