--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 body
 {
     background-image: url(./assets/owbg.png);
-    background-size: cover;
+    background-size: stretch;
     background-position: center;
 }
 
