--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ html {
 body
 {
     background-image: url(./assets/owbg.png);
-    background-size: stretch;
     background-position: center;
+    background-size: cover;
+    background-size: 100% 100%;
 }
 
 #roleModeButtonStyle
