--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body
     width:300px;
     border:0px;
     background-color: #ff000000;
-    color:orange;
+    color:#FC9D1F;
     cursor: pointer;
 }
 
@@ -33,25 +33,13 @@ body
     display: block;
     justify-content: center;
     align-items: center;
-    width: 100;
-    height: 50;
-  
+    width: 100%;
+    height: 50px; 
 }
 
 #roleModeDiv
 {
     display: flex;
-    
-}
-
-#roleModeImageDiv
-{
-    justify-content: center;
-    align-items: center;
-    width: 100;
-    height: 50;
-    margin: 10px;
-    flex-wrap: wrap;
 }
 
 #roleModeButtonDiv
@@ -60,4 +48,15 @@ body
     justify-content: left;
     align-items: center;
     height: 90vh;
+}
+
+#allModeButtonStyle
+{
+    font-family:'BigNoodleTooOblique';
+    font-size:50px;
+    width:270px;
+    border:0px;
+    background-color: #ff000000;
+    color:#FC9D1F;
+    cursor: pointer;
 }
