--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ html {
     height: 100%;
 }
 
+body
+{
+    background-image: url(./assets/owbg.png);
+    background-position: center;
+    background-size: cover;
+    background-size: 100% 100%;
+}
+
 .content{
     width:100%;
     height:100vh;
