--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 
 html {
     height: 100%;
+    overflow: hidden;
 }
 
 body
 {
     background-image: url(./assets/owbg.png);
-    background-position: center;
     background-size: cover;
-    background-size: 100% 100%;
+    background-position-y: bottom;;
 }
 
 .content{
